--- a/HBIos/Base.lproj/Main.storyboard
+++ b/HBIos/Base.lproj/Main.storyboard
@@ -79,7 +79,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="YHr-j6-c5C" customClass="RatingBar" customModule="HBIos" customModuleProvider="target">
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="YHr-j6-c5C" customClass="RatingBar" customModule="HBIos" customModuleProvider="target">
                                 <rect key="frame" x="87" y="160" width="240" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="yK8-ep-p9i"/>
@@ -173,6 +173,7 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                     </subviews>
+                                    <color key="backgroundColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
